--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
 
     <div id="followingTextcontainer">
-        <h1>This is following texts</h1>
+        <h1>Following dummy texts</h1>
         <p>
             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
             industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
