--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>
-        Scroll Magic Play Background Video Summary
+        Scrolling to Play Background Video
     </title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
